--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Just playing around">
     
     
-    <link rel="preload" href="/assets/css/0.styles.d4d1289e.css" as="style"><link rel="preload" href="/assets/js/app.21ea607d.js" as="script"><link rel="preload" href="/assets/js/2.65618a35.js" as="script"><link rel="preload" href="/assets/js/9.f211fa4e.js" as="script"><link rel="prefetch" href="/assets/js/10.740a830a.js"><link rel="prefetch" href="/assets/js/11.08856fac.js"><link rel="prefetch" href="/assets/js/12.4f050770.js"><link rel="prefetch" href="/assets/js/13.7e5d11ae.js"><link rel="prefetch" href="/assets/js/14.fa1deff1.js"><link rel="prefetch" href="/assets/js/15.07c6f591.js"><link rel="prefetch" href="/assets/js/16.72d65ac7.js"><link rel="prefetch" href="/assets/js/17.94305a1f.js"><link rel="prefetch" href="/assets/js/18.8f238e57.js"><link rel="prefetch" href="/assets/js/19.89ce8980.js"><link rel="prefetch" href="/assets/js/20.f77a17c7.js"><link rel="prefetch" href="/assets/js/3.29145992.js"><link rel="prefetch" href="/assets/js/4.9fe59de7.js"><link rel="prefetch" href="/assets/js/5.154c42bc.js"><link rel="prefetch" href="/assets/js/6.64f3d772.js"><link rel="prefetch" href="/assets/js/7.833c73d3.js"><link rel="prefetch" href="/assets/js/8.16b54568.js">
+    <link rel="preload" href="/assets/css/0.styles.d4d1289e.css" as="style"><link rel="preload" href="/assets/js/app.3c0dd8cb.js" as="script"><link rel="preload" href="/assets/js/2.65618a35.js" as="script"><link rel="preload" href="/assets/js/10.71c9b027.js" as="script"><link rel="prefetch" href="/assets/js/11.b499b15d.js"><link rel="prefetch" href="/assets/js/12.d88b7561.js"><link rel="prefetch" href="/assets/js/13.e301c6d9.js"><link rel="prefetch" href="/assets/js/14.c713d0b8.js"><link rel="prefetch" href="/assets/js/15.40843ad1.js"><link rel="prefetch" href="/assets/js/16.cbd53c07.js"><link rel="prefetch" href="/assets/js/17.eca40ad6.js"><link rel="prefetch" href="/assets/js/18.e454b2b7.js"><link rel="prefetch" href="/assets/js/19.1300bc02.js"><link rel="prefetch" href="/assets/js/20.4d453413.js"><link rel="prefetch" href="/assets/js/21.e345e015.js"><link rel="prefetch" href="/assets/js/3.29145992.js"><link rel="prefetch" href="/assets/js/4.9fe59de7.js"><link rel="prefetch" href="/assets/js/5.5d77c5f6.js"><link rel="prefetch" href="/assets/js/6.13bb152b.js"><link rel="prefetch" href="/assets/js/7.da6cd986.js"><link rel="prefetch" href="/assets/js/8.bb1432a3.js"><link rel="prefetch" href="/assets/js/9.dd1e9b4f.js">
     <link rel="stylesheet" href="/assets/css/0.styles.d4d1289e.css">
   </head>
   <body>
@@ -16,6 +16,6 @@
     </p> <p class="action"><a href="/sass/" class="nav-link action-button">芝麻开门 →</a></p></header> <!----> <div class="theme-default-content custom content__default"></div> <div class="footer">
     ～～～
   </div></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.21ea607d.js" defer></script><script src="/assets/js/2.65618a35.js" defer></script><script src="/assets/js/9.f211fa4e.js" defer></script>
+    <script src="/assets/js/app.3c0dd8cb.js" defer></script><script src="/assets/js/2.65618a35.js" defer></script><script src="/assets/js/10.71c9b027.js" defer></script>
   </body>
 </html>
